--- a/src/main/resources/isen/project/contact_app/view/ContactCard.fxml
+++ b/src/main/resources/isen/project/contact_app/view/ContactCard.fxml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="85.0" prefWidth="400.0" styleClass="anchor-pane" stylesheets="@ContactCardStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="isen.project.contact_app.view.ContactCardController">
+<AnchorPane prefHeight="40.0" prefWidth="323.0" styleClass="anchor-pane" stylesheets="@ContactCardStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="isen.project.contact_app.view.ContactCardController">
     <children>
-        <HBox spacing="10" stylesheets="@ContactCardStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox layoutX="20.0" layoutY="20.0" prefHeight="30.0" prefWidth="293.0" spacing="30.0" stylesheets="@ContactCardStyle.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <ImageView fitHeight="60.0" fitWidth="60.0" preserveRatio="true">
+                <ImageView fitHeight="38.0" fitWidth="40.0" preserveRatio="true">
                     <image>
                         <Image url="https://cdn-icons-png.flaticon.com/512/7980/7980574.png" />
                     </image>
                 </ImageView>
-                <VBox prefHeight="63.0" prefWidth="173.0">
-                    <Label fx:id="firstName" style="-fx-font-weight: bold;" text="Prénom" />
-               <Label fx:id="lastName" layoutX="10.0" layoutY="10.0" style="-fx-font-weight: bold;" text="Nom" />
-                    <Label fx:id="emailLabel" style="-fx-font-size: 12;" text="email@example.com" />
-               <Label fx:id="phoneNumber" layoutX="10.0" layoutY="44.0" style="-fx-font-size: 12;" text="number" />
-                </VBox>
+                 <Label fx:id="firstName" style="-fx-font-family: Arial;" stylesheets="@ContactCardStyle.css" text="Prénom" textFill="WHITE">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="lastName" style="-fx-font-family: Arial;" stylesheets="@ContactCardStyle.css" text="Nom">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="phoneNumber" style="-fx-font-family: Arial;" stylesheets="@ContactCardStyle.css" text="number">
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
             </children>
         </HBox>
+      <Button fx:id="button" mnemonicParsing="false" onAction="#clickOnContactCard" styleClass="contact-button" stylesheets="@ContactCardStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
