--- a/src/main/resources/isen/project/contact_app/view/HomeScreen.fxml
+++ b/src/main/resources/isen/project/contact_app/view/HomeScreen.fxml
@@ -3,16 +3,28 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="isen.project.contact_app.view.HomeController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" styleClass="image-view" stylesheets="@HomeScreenStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="isen.project.contact_app.view.HomeController">
    <children>
-      <ScrollPane hbarPolicy="NEVER" layoutX="75.0" layoutY="100.0" prefHeight="450.0" prefWidth="460.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0">
+      <ImageView fitHeight="486.0" fitWidth="416.0" layoutX="117.0" layoutY="58.0" pickOnBounds="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="70.0">
+         <image>
+            <Image url="@../images/Design%20sans%20titre%20(1).png" />
+         </image>
+      </ImageView>
+      <ScrollPane hbarPolicy="NEVER" layoutX="92.0" layoutY="82.0" prefHeight="462.0" prefWidth="336.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="82.0">
         <content>
-          <AnchorPane prefHeight="450.0" prefWidth="460.0">
+          <AnchorPane prefHeight="450.0" prefWidth="282.0">
                <children>
-                  <FlowPane fx:id="contactsContainer" hgap="10.0" vgap="10.0">
+                  <FlowPane fx:id="contactsContainer" hgap="10.0" prefHeight="10.0" prefWidth="336.0" vgap="10.0">
                      <padding>
                         <Insets top="10.0" />
                      </padding>
@@ -20,7 +32,106 @@
                </children></AnchorPane>
         </content>
       </ScrollPane>
-      <Button layoutX="30.0" layoutY="24.0" mnemonicParsing="false" onMouseClicked="#switchToListPersons" prefHeight="50.0" prefWidth="250.0" text="List persons" />
-      <Button layoutX="298.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#switchToAddPersons" prefHeight="50.0" prefWidth="250.0" text="Add person" />
+      <Text fill="WHITE" layoutX="86.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Contacts" AnchorPane.topAnchor="40.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <AnchorPane fx:id="profilCard" layoutX="1289.0" layoutY="124.0" prefHeight="486.0" prefWidth="401.0" visible="false" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="70.0">
+         <children>
+            <ImageView fitHeight="486.0" fitWidth="486.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@../images/Profil%20Card.png" />
+               </image>
+            </ImageView>
+            <HBox prefHeight="102.0" prefWidth="409.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="220.0">
+               <children>
+                  <VBox prefHeight="102.0" prefWidth="225.0" spacing="2.0">
+                     <children>
+                        <Text fx:id="prenom" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" styleClass="ProfilText" text="prenom" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="nom" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="nom" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="nickname" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="nickname" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="34.0" prefWidth="227.0" spacing="2.0">
+                     <children>
+                        <Text fx:id="adress" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Adress" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="number" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="phone" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="email" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="email" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fx:id="birthDate" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="birthDate" visible="false" wrappingWidth="134.52257537841797">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="36.0" prefWidth="338.0" spacing="50.0" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="350.0">
+               <children>
+                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteClicked" prefHeight="34.0" prefWidth="145.0" style="-fx-background-color: #362747; -fx-font-family: Arial; -fx-font-weight: bold;" styleClass="button-test" stylesheets="@HomeScreenStyle.css" text="DELETE" />
+                  <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="145.0" style="-fx-background-color: #362747; -fx-font-family: Arial; -fx-font-weight: bold;" styleClass="button-test" stylesheets="@HomeScreenStyle.css" text="EDIT" />
+               </children>
+            </HBox>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="1299.0" layoutY="134.0" prefHeight="486.0" prefWidth="401.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="70.0">
+         <children>
+            <ImageView fitHeight="486.0" fitWidth="486.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@../images/Profil%20Card.png" />
+               </image>
+            </ImageView>
+            <HBox prefHeight="102.0" prefWidth="409.0" spacing="50.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="220.0">
+               <children>
+                  <VBox prefHeight="102.0" prefWidth="225.0" spacing="2.0">
+                     <children>
+                        <TextField promptText="First Name" />
+                        <TextField promptText="Last Name" />
+                        <TextField promptText="Nick Name" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="34.0" prefWidth="227.0" spacing="2.0">
+                     <children>
+                        <TextField promptText="Adress" />
+                        <TextField promptText="Phone Number" />
+                        <TextField promptText="Email Adress" />
+                        <TextField promptText="Birth Date" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="36.0" prefWidth="338.0" spacing="50.0" AnchorPane.leftAnchor="75.0" AnchorPane.topAnchor="350.0">
+               <children>
+                  <Button fx:id="deleteButton1" mnemonicParsing="false" onAction="#onDeleteClicked" prefHeight="34.0" prefWidth="145.0" style="-fx-background-color: #362747; -fx-font-family: Arial; -fx-font-weight: bold;" styleClass="button-test" stylesheets="@HomeScreenStyle.css" text="DELETE" />
+                  <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="145.0" style="-fx-background-color: #362747; -fx-font-family: Arial; -fx-font-weight: bold;" styleClass="button-test" stylesheets="@HomeScreenStyle.css" text="EDIT" />
+               </children>
+            </HBox>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
